2003-04-08  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_factory_get_missing): helper function to
	load the gtkstock missing image item.
	(draw): add logic to draw missing image icon.

2003-04-07  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (style_set): pass the widget instead of the style.

	* htmlcolorset.h: fixup prototype.

	* htmlcolorset.c (html_colorset_set_style): retrieve the color of
	the links and spell error from the style properties.h

2003-04-07  Radek Doulik  <rodo@ximian.com>

	* keybindingsrc.emacs: change Home/End bindings

2003-04-07  Larry Ewing  <lewing@ximian.com>

	* htmltext.c (append_selection_string): use the new helper, this
	is the chosen solution to 37172.
	
	* htmlclueflow.c (save_plain): use the new helper function.

	* htmlengine-save.c (html_engine_save_string_append_nonbsp): add
	helper function.

2003-04-07  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (delete_object): test for active
	selection after selection update

2003-04-04  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_factory_unregister): make sure we always
	clear the factory when we are removed from it, ad guard against
	double removal.  Fixes Ximian #40627

2003-04-03  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (selection_received): add UTF8_STRING dnd support.

	* htmlengine.c: don't try to create image inputs with no src url.

2003-04-03  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_set_paragraph_style): if selection is
	active, change style everytime
	(scroll_timeout_cb): don't clamp coordinates if we are already at
	the boundaries

	* htmlengine-edit-cut-and-paste.c (delete_object): update
	selection after cursor/mark move

2003-04-03  Not Zed  <NotZed@Ximian.com>

	** for bug 40450, based on patch from <philip.zhao@sun.com>

	* htmltextslave.c (html_text_slave_nb_width)
	(html_text_slave_remove_leading_space): Remove inline keyword on
	non-static methods.
